# MarkDown

./: .gitignore  README.md
cplus/: CMakeLists.txt
cplus/design_pattern/: CMakeLists.txt  README.md
cplus/design_pattern/app/: CMakeLists.txt  design_pattern_app.cpp
cplus/design_pattern/module/: CMakeLists.txt
cplus/design_pattern/module/include/abstract_factory_pattern/: Factory.h  FactoryMain.h  concrete_factory.h  concrete_product.h  product.h
cplus/design_pattern/module/include/adapter_pattern/: AdapterMain.h  adaptee.h  adapter.h  target.h
cplus/design_pattern/module/include/bridge_pattern/: BridgeMain.h  abstraction.h  concrete_implementor.h  implementor.h  refined_abstraction.h
cplus/design_pattern/module/include/observer_pattern/: ObserverMain.h  concrete_observer.h  concrete_subject.h  observer.h  subject.h
cplus/design_pattern/module/include/singleton_pattern/: Singleton.h  SingletonMain.h
cplus/design_pattern/module/source/abstract_factory_pattern/: Factory.cpp  FactoryMain.cpp
cplus/design_pattern/module/source/bridge_pattern/: BridgeMain.cpp
cplus/design_pattern/module/source/observer_pattern/: ObserverMain.cpp
cplus/design_pattern/module/source/singleton_pattern/: Singleton.cpp
md/: vector-清空内存.md  引用折叠-右值引用.md
